Fix matrix mobile styles
Summary:
Fix the matrix widget styles on mobile. Michelle figured out
the styles and the dimensions, I fixed up the code and fixed the input
path bug.

Test Plan:
 - Make a perseus exercise locally (not with mobile styles)
  - Ensure that everything still works and looks good
 - Make a perseus exercise on a local webapp, visit it in mobile
  - Ensure that the brackets look good
  - Ensure that the brackets move when inputs are selected
  - Ensure that if a large expression is written, it is clipped and
    doesn't make the whole thing look bad

Reviewers: alex

Reviewed By: alex

Subscribers: aria

Differential Revision: https://phabricator.khanacademy.org/D15329

--- a/stylesheets/exercise-content-package/widgets/matrix.less
+++ b/stylesheets/exercise-content-package/widgets/matrix.less
@@ -25,6 +25,7 @@
         margin: @margin;
         padding: @padding;
         position: relative;
+        width: auto;
     }
 
     .matrix-row {
@@ -83,6 +84,29 @@
             &.outside {
                 background: #444;
             }
+        }
+    }
+}
+
+body.mobile {
+    .perseus-matrix {
+        .matrix-input {
+            display: table;
+        }
+
+        .matrix-row {
+            display: table-row;
+        }
+
+        .matrix-input-field {
+            display: table-cell;
+        }
+
+        .math-output {
+            margin: 4px 4px 2px 4px;
+            max-height: 36px;
+            max-width: 80px;
+            overflow: hidden;
         }
     }
 }
